fix: too much bottom margin on code blocks

--- a/ui/src/components/QMarkdown.sass
+++ b/ui/src/components/QMarkdown.sass
@@ -27,10 +27,8 @@
     line-height: 1.5em
     tab-size: 4
     hyphens: none
-    margin-bottom: 8px
 
   pre code
-    // white-space: pre-wrap
     border-radius: 0
     width: max-content
 
@@ -220,7 +218,6 @@
     color: $grey-10
     font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace
     border-radius: $generic-border-radius
-    padding-bottom: 16px
 
   &--line-numbers
     padding: 5px
@@ -241,7 +238,6 @@
   &--code-wrapper
     width: 100%
     min-width: 0
-    margin-bottom: -16px!important
 
   &--code,
   &--code__inner
@@ -291,8 +287,8 @@
   &--table tbody tr:nth-child(odd)
     background: $grey-4
 
-.q-markdown--page > div, .q-markdown--page > pre
-  margin-bottom: 22px
+// .q-markdown--page > div, .q-markdown--page > pre
+//   margin-bottom: 22px
 
 blockquote.q-markdown--link
   background: transparent
